created responses and service swagger implementation
