# simple-rest-api-with-swagger/docs/swagger.json
@@ -28,23 +28,82 @@
                 ],
                 "summary": "Create new token",
                 "operationId": "create-token",
+                "parameters": [
+                    {
+                        "description": "Create new token",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateTokenRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CreateTokenResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/responses.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "integer"
+                                        },
+                                        "data": {
+                                            "$ref": "#/definitions/models.CreateTokenResponse"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.CreateTokenResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/responses.JSONSuccessResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.CreateTokenResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/responses.JSONInternalErrorResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -52,6 +111,19 @@
         }
     },
     "definitions": {
+        "models.CreateTokenRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "description": "Password type is string and we validated",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "Username type is string and we validated",
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateTokenResponse": {
             "type": "object",
             "properties": {
@@ -62,6 +134,34 @@
                 "token": {
                     "description": "Token type is string",
                     "type": "string"
+                }
+            }
+        },
+        "responses.JSONInternalErrorResult": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 500
+                },
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "Internal Error"
+                }
+            }
+        },
+        "responses.JSONSuccessResult": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "Success"
                 }
             }
         }
